<resources>
    <string name="app_name">My Expense</string>
    <string name="top_expenses">Displaying recent <strong>10 expenses</strong></string>
    <string name="add_new_expense_button">+ Add New Expense</string>

    <!-- ExpenseDetailActivity -->
    <string name="expense_detail_expense_type">Type of Expense</string>
    <string name="expense_detail_amount">Amount</string>
    <string name="expense_detail_description">Description</string>
    <string name="expense_detail_comment">Comment</string>
    <string name="expense_detail_expense_date">Date of Expense</string>
    <string name="expense_detail_heading">Expense Detail</string>
    <string name="expense_detail_close_button">Close</string>
    <string name="expense_detail_edit_button">Edit</string>
    <string name="expense_detail_cancel_button">Cancel</string>

    <!-- ExpenseDetailEditActivity -->
    <string name="expense_detail_heading_edit">Edit Expense Detail</string>
    <string name="expense_detail_update_button_text">Update Expense</string>
    <string name="expense_detail_save_button_text">Save Expense</string>

    <!-- Expense Type -->
    <string-array name="expense_type_list">
        <item>Cash</item>
        <item>Debit Card</item>
        <item>Credit Card</item>
        <item>Net Banking</item>
        <item>Paytm</item>
    </string-array>

    <!-- Expense Display Range -->
    <string-array name="expense_display_range">
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>
</resources>