<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense_detail_heading_edit"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_detail_expense_type"
                android:layout_column="1"
                android:paddingLeft="0dp"
                android:paddingStart="0dp"
                android:paddingRight="20dp"
                android:paddingEnd="20dp"
                />

            <Spinner
                android:id="@+id/expense_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                android:layout_column="2"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_detail_amount"
                android:layout_column="1"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/expense_detail_amount"
                android:layout_column="2"
                android:inputType="number"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_detail_expense_date"
                android:layout_column="1"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/expense_detail_expense_date"
                android:layout_column="2"
                android:focusable="false"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_detail_description"
                android:layout_column="1"
                />
            <EditText
                android:inputType="textMultiLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/expense_detail_description"
                android:layout_column="2"
                android:minLines="2"
                android:maxLines="6"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_detail_comment"
                android:layout_column="1"
                />
            <EditText
                android:inputType="textMultiLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/expense_detail_comment"
                android:layout_column="2"
                android:minLines="2"
                android:maxLines="6"
                />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="update"
            android:text="@string/expense_detail_update_button"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="close"
            android:text="@string/expense_detail_close_button"
            />

    </LinearLayout>

</LinearLayout>